<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="calculate">Calculate BMI</string>
    <string name="weight">Enter Your Weight (in kg)</string>
    <string name="htFt">Enter Your Height(in ft)</string>
    <string name="heightIn">Enter Your Height (in In)</string>
    <string name="result"> Get Your Result Here....</string>
    <string name="you_are_underweight">You Are Underweight.</string>
    <string name="you_are_overweight">You are Overweight.</string>
    <string name="you_are_normal">You are Normal.</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="body_mass_index">Body Mass Index</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="your_bmi_is">Your BMI is </string>
    <string name="thank_you_for_using_bmi">Thank You for Using BMI Calculator</string>
</resources>